# xml-bench

./: .travis.yml  LICENSE  README.md  stack.yaml  xml-benchmark.cabal
hxml-0.2/: ChangeLog.md  LLParsing.hs  XMLParse.hs  XMLScanner.hs  hxml.cabal
src/: Bench.hs  Haxml.hs  Hexml.hs  Hexpat.hs  Pugi.hs  TinyXml.hs  XmlConduit.hs  XmlLibrary.hs  benchHxml.hs
xml/: benchmark.xml.bz2  mail.xml.bz2
